bk_ida/gobmkida/g0/load_and_score_sgf_file
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:665:10: error: expected expression
tcmalloc::TList<tcmalloc::Span>::Elem::Elem( &score_tree); 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:667:64: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
sgftreeCreateHeaderNode( &score_tree, board_size, *( float *)v3.m128i_i32); 
                                                             ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:707:14: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( float *)v3.m128i_i32 = aftermath_compute_score( next, *( float *)v3.m128i_i32, &score_tree); 
           ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:707:71: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( float *)v3.m128i_i32 = aftermath_compute_score( next, *( float *)v3.m128i_i32, &score_tree); 
                                                                    ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:711:14: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( float *)v3.m128i_i32 = Isis::UrlDb::GetFileName( &lower_bound, &upper_bound); 
           ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:711:27: error: use of undeclared identifier 'Isis'
*( float *)v3.m128i_i32 = Isis::UrlDb::GetFileName( &lower_bound, &upper_bound); 
                          ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:755:47: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
sgfWriteResult( score_tree.root, *( float *)v3.m128i_i32, 1); 
                                            ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:769:14: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( float *)v3.m128i_i32 = estimate_score( 0LL, 0LL); 
           ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:776:19: error: use of undeclared identifier 'off_4E1420'
v7 = ( _BYTE *)( &off_4E1420 + 2); 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/interface/play_solo.c:778:22: error: use of undeclared identifier 'off_4E1420'
v7 = ( const char *)&off_4E1420; 
                     ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/load_and_score_sgf_file/src/obj/2/play_solo.o] Error 1
